--- a/dolphins.py.ipynb
+++ b/dolphins.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -11,60 +11,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jeffery was created\n",
-      "Carrot was created\n",
-      "Kayak was created\n",
-      "Tiffany was created\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "Cannot procreate.\n",
-      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
-      "male\n",
-      "Aabheer\n",
-      "Aabheer was created\n",
-      "Cannot procreate.\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "dictionary changed size during iteration",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-28ba6d3dd5b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;32mdel\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdolphin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mmale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfemale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m             \u001b[0mcreation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfemale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
+      "running...\n",
+      "Trial No.  1\n",
+      "##################################################### \n",
+      "Entering Year:  0 with 4 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  25 with 13 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  50 with 43 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  75 with 150 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  100 with 449 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  125 with 1400 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "At year 149 , there are  4055 living dolphins.\n",
+      "***************************************************************\n",
+      "Trial No.  2\n",
+      "##################################################### \n",
+      "Entering Year:  0 with 4 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  25 with 17 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  50 with 61 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  75 with 185 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  100 with 537 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  125 with 1695 dolphins with num breeding.\n",
+      "##################################################### \n",
+      "At year 149 , there are  4936 living dolphins.\n",
+      "***************************************************************"
      ]
     }
    ],
@@ -77,7 +56,9 @@
     "Name: Jacob Baca\n",
     "Partner: Terry Tran\n",
     "\n",
-    "Build a model for a dolohin population over 150 years\n",
+    "Build a model for a dolohin population over 150 years. This will take a while\n",
+    "to run because I am creating the list of names each trial. Sorry! I will change\n",
+    "it in part B\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -99,7 +80,7 @@
     "        self.death = random.gauss(35, 5)\n",
     "        self.age = 0\n",
     "        self.timeafter = True #time after procreating \n",
-    "        print self.name + ' was created'\n",
+    "        #print self.name + ' was created'\n",
     "        \n",
     "    def aging(self):\n",
     "        self.age += 1\n",
@@ -119,16 +100,23 @@
     "            return False\n",
     "    \n",
     "    def sexy_time(self, Dolphin):\n",
+    "        #print self.name, self.timeafter, Dolphin.name, Dolphin.timeafter\n",
     "        if type(self.timeafter) != bool:\n",
     "            if self.timeafter <= 5:\n",
     "                return False\n",
     "        if self.sex == Dolphin.sex: #can't have the same sex\n",
     "            return False \n",
-    "        if (self.age < 8) or (Dolphin.age < 8): #above age of 8\n",
+    "        if (self.age < 9) or (Dolphin.age < 9): #above age of 8\n",
     "            return False \n",
     "        if abs(self.age - Dolphin.age) >= 10: #no age difference greater than 10\n",
     "            return False\n",
     "        if (Dolphin.mother,Dolphin.father) == (self.mother,self.father):\n",
+    "            return False\n",
+    "        \n",
+    "        #restricts them from mating with their parents. \n",
+    "        if self.mother == Dolphin.name or self.father == Dolphin.name:\n",
+    "            return False\n",
+    "        if Dolphin.mother == self.name or Dolphin.father == self.name:\n",
     "            return False\n",
     "        else:\n",
     "            return True\n",
@@ -140,7 +128,7 @@
     "    female_name_lst = []\n",
     "    z = 0 #number of pages iterated through\n",
     "\n",
-    "    while z <=1: #iterates through baby-names website pages for names \n",
+    "    while z <=100: #iterates through baby-names website pages for names \n",
     "\n",
     "        m_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
     "        f_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
@@ -192,31 +180,27 @@
     "            yield female_names[f]\n",
     "            f+=1\n",
     "\n",
-    "###################################################################################################################\n",
-    "            \n",
-    "male_generator = name_generator('male')\n",
-    "female_generator = name_generator('female')\n",
-    "\n",
+    "###################################################################################################################            \n",
+    "    \n",
     "def creation(mother, father):\n",
     "    if mother.sexy_time(father):\n",
     "        gender = random.choice(['male', 'female'])\n",
-    "        print gender\n",
+    "        #print gender\n",
     "        if gender == 'male':\n",
     "            male_gener = male_generator.next()\n",
-    "            print male_gener\n",
+    "            #print male_gener\n",
     "            male_babyboy = Dolphins(male_gener, mother, father, gender) #creates instance\n",
+    "            mother.timeafter = 0\n",
+    "            father.timeafter = 0\n",
     "            return male_babyboy\n",
     "            #m_dolph_dic[male_babyboy.name] = male_babyboy\n",
     "        else:\n",
     "            female_gener = female_generator.next()\n",
     "            female_babygurl = Dolphins(female_gener, mother, father, gender) #creates instance\n",
-    "            return male_babyboy\n",
+    "            mother.timeafter = 0\n",
+    "            father.timeafter = 0\n",
+    "            return female_babygurl\n",
     "            #f_dolph_dic[female_babygurl.name] = female_babygurl\n",
-    "            \n",
-    "        mother.timeafter = 0\n",
-    "        father.timeafter = 0\n",
-    "    else:\n",
-    "        print 'Cannot procreate.'\n",
     "\n",
     "#these are the original 4 dolphin in the population:\n",
     "Jeffery = Dolphins('Jeffery', 'Todd Pinkins', 'Hilay sause', 'male')\n",
@@ -228,45 +212,76 @@
     "f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
     "dead_dolph_dic={}\n",
     "\n",
-    "for i in range(151): #this progresses through 150 years\n",
-    "    lst = []\n",
+    "print 'running...'\n",
+    "for i in range(1, 11):\n",
     "    \n",
-    "    #male age dolphins\n",
-    "    for dolphin in m_dolph_dic: #Ages dolphins and checks if they are at the age of death\n",
-    "        #print dolphin\n",
-    "        dol = m_dolph_dic[str(dolphin)]\n",
-    "        dol.aging()\n",
-    "        #print 'dol.die() = ', dol.die(),int(dol.death), dol.age\n",
-    "        if dol.die() == True:\n",
-    "            lst.append(dol)\n",
-    "            \n",
-    "    for dolphin in lst: #deletes dolphins from dictionary and adds to dead dolph dictionary\n",
-    "        dead_dolph_dic[dolphin.name]=dolphin\n",
-    "        del m_dolph_dic[dolphin.name]\n",
+    "    print 'Trial No. ', i\n",
     "    \n",
-    "    #female Age dolphins\n",
-    "    for dolphin in f_dolph_dic: #Ages dolphins and checks if they are at the age of death\n",
-    "        #print dolphin\n",
-    "        dol = f_dolph_dic[str(dolphin)]\n",
-    "        dol.aging()\n",
-    "        #print 'dol.die() = ', dol.die(),int(dol.death), dol.age\n",
-    "        if dol.die() == True:\n",
-    "            lst.append(dol)\n",
-    "            \n",
-    "    for dolphin in lst: #deletes dolphins from dictionary and adds to dead dolph dictionary\n",
-    "        dead_dolph_dic[dolphin.name]=dolphin\n",
-    "        del f_dolph_dic[dolphin.name]\n",
-    "        \n",
-    "    new_dolphins = {}\n",
+    "    male_generator = name_generator('male')\n",
+    "    female_generator = name_generator('female')\n",
     "    \n",
-    "    for male in m_dolph_dic:\n",
-    "        for female in f_dolph_dic: \n",
-    "            baby = creation(m_dolph_dic[male], f_dolph_dic[female])\n",
-    "            if isinstance #check if it is the string 'cannot procreate' or a dolphin instance\n",
-    "                          #if it is \n",
-    "            \n",
-    "    print m_dolph_dic.keys(), f_dolph_dic.keys()\n",
-    "            "
+    "    for t in range(150): #this progresses through 150 years\n",
+    "        if t==0 or t==25 or t==50 or t==75 or t==100 or t==125:\n",
+    "            print '#####################################################',\\\n",
+    "                  '\\n', 'Entering Year: ', t, 'with',\\\n",
+    "                  len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()),\\\n",
+    "                'dolphins,', 'with', 'num', 'breeding.'\n",
+    "\n",
+    "        if t==149:\n",
+    "            print '#####################################################',\\\n",
+    "                  '\\n','At year', t, ', there are ',\\\n",
+    "                  len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()),\\\n",
+    "                'living dolphins.'\n",
+    "        lst = []\n",
+    "\n",
+    "        #male age dolphins\n",
+    "        for dolphin in m_dolph_dic: #Ages dolphins and checks if they are at the age of death\n",
+    "            #print dolphin\n",
+    "            dol = m_dolph_dic[str(dolphin)]\n",
+    "            dol.aging()\n",
+    "            #print 'dol.die() = ', dol.die(),int(dol.death), dol.age\n",
+    "            if dol.die() == True:\n",
+    "                lst.append(dol)\n",
+    "\n",
+    "        for dolphin in lst: #deletes dolphins from dictionary and adds to dead dolph dictionary\n",
+    "            dead_dolph_dic[dolphin.name]=dolphin\n",
+    "            del m_dolph_dic[dolphin.name]\n",
+    "\n",
+    "        lst = []\n",
+    "\n",
+    "        #female Age dolphins\n",
+    "        for dolphin in f_dolph_dic: #Ages dolphins and checks if they are at the age of death\n",
+    "            #print dolphin\n",
+    "            dol = f_dolph_dic[str(dolphin)]\n",
+    "            dol.aging()\n",
+    "            #print 'dol.die() = ', dol.die(),int(dol.death), dol.age\n",
+    "            if dol.die() == True:\n",
+    "                lst.append(dol)\n",
+    "\n",
+    "        for dolphin in lst: #deletes dolphins from dictionary and adds to dead dolph dictionary\n",
+    "            dead_dolph_dic[dolphin.name]=dolphin\n",
+    "            del f_dolph_dic[dolphin.name]\n",
+    "\n",
+    "        baby_dolphins = []\n",
+    "\n",
+    "        for male in m_dolph_dic: #mates dolphin population\n",
+    "            for female in f_dolph_dic: \n",
+    "                baby = creation(m_dolph_dic[male], f_dolph_dic[female])\n",
+    "                if isinstance(baby, Dolphins): #check if it is the string 'cannot procreate' or a dolphin instance if it is \n",
+    "                    baby_dolphins.append(baby)\n",
+    "\n",
+    "        for dolphin in baby_dolphins: #adds newly born dolphins to living dolphin lists\n",
+    "            if dolphin.sex == 'male':\n",
+    "                m_dolph_dic[dolphin.name]= dolphin\n",
+    "            else:\n",
+    "                f_dolph_dic[dolphin.name]= dolphin\n",
+    "                \n",
+    "    m_dolph_dic={'Jeffery':Jeffery, 'Carrot':Carrot} #restarting the dics\n",
+    "    f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
+    "    dead_dolph_dic={}\n",
+    "    \n",
+    "    print 'n\\', \"***************************************************************\", 'n\\'\n",
+    "    "
    ]
   },
   {
