--- a/dolphins.py.ipynb
+++ b/dolphins.py.ipynb
@@ -2,48 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running...\n",
-      "Trial No.  1\n",
-      "##################################################### \n",
-      "Entering Year:  0 with 4 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  25 with 13 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  50 with 43 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  75 with 150 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  100 with 449 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  125 with 1400 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "At year 149 , there are  4055 living dolphins.\n",
-      "***************************************************************\n",
-      "Trial No.  2\n",
-      "##################################################### \n",
-      "Entering Year:  0 with 4 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  25 with 17 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  50 with 61 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  75 with 185 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  100 with 537 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  125 with 1695 dolphins with num breeding.\n",
-      "##################################################### \n",
-      "At year 149 , there are  4936 living dolphins.\n",
-      "***************************************************************"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-20-8a013b33d8a3>, line 227)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-8a013b33d8a3>\"\u001b[0;36m, line \u001b[0;32m227\u001b[0m\n\u001b[0;31m    print 'n\\', \"***************************************************************\"\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -280,7 +249,7 @@
     "    f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
     "    dead_dolph_dic={}\n",
     "    \n",
-    "    print 'n\\', \"***************************************************************\", 'n\\'\n",
+    "    print 'n\\', \"***************************************************************'\n",
     "    "
    ]
   },
