--- a/dolphins.py.ipynb
+++ b/dolphins.py.ipynb
@@ -2,17 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-20-8a013b33d8a3>, line 227)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running...\n",
+      "Trial No.  1\n",
+      "##################################################### \n",
+      "Entering Year:  0 with 4 dolphins, with 0 breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  25 with 11 dolphins, with 6 breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  50 with 21 dolphins, with 15 breeding.\n",
+      "##################################################### \n",
+      "Entering Year:  75 with 35 dolphins, with 21 breeding.\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-8a013b33d8a3>\"\u001b[0;36m, line \u001b[0;32m227\u001b[0m\n\u001b[0;31m    print 'n\\', \"***************************************************************\"\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ac2b18e233d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#mates dolphin population\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mfemale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m                 \u001b[0mbaby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfemale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDolphins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#check if it is the string 'cannot procreate' or a dolphin instance if it is\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m                     \u001b[0mbaby_dolphins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaby\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-ac2b18e233d1>\u001b[0m in \u001b[0;36mcreation\u001b[0;34m(mother, father)\u001b[0m\n\u001b[1;32m    145\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mmale_babyboy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m             \u001b[0mfemale_gener\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfemale_generator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m             \u001b[0mfemale_babygurl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDolphins\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfemale_gener\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfather\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgender\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#creates instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0mmother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeafter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
    ],
@@ -97,7 +117,7 @@
     "    female_name_lst = []\n",
     "    z = 0 #number of pages iterated through\n",
     "\n",
-    "    while z <=100: #iterates through baby-names website pages for names \n",
+    "    while z <=1: #iterates through baby-names website pages for names \n",
     "\n",
     "        m_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
     "        f_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
@@ -162,14 +182,13 @@
     "            mother.timeafter = 0\n",
     "            father.timeafter = 0\n",
     "            return male_babyboy\n",
-    "            #m_dolph_dic[male_babyboy.name] = male_babyboy\n",
     "        else:\n",
     "            female_gener = female_generator.next()\n",
     "            female_babygurl = Dolphins(female_gener, mother, father, gender) #creates instance\n",
     "            mother.timeafter = 0\n",
     "            father.timeafter = 0\n",
     "            return female_babygurl\n",
-    "            #f_dolph_dic[female_babygurl.name] = female_babygurl\n",
+    "\n",
     "\n",
     "#these are the original 4 dolphin in the population:\n",
     "Jeffery = Dolphins('Jeffery', 'Todd Pinkins', 'Hilay sause', 'male')\n",
@@ -179,28 +198,33 @@
     "\n",
     "m_dolph_dic={'Jeffery':Jeffery, 'Carrot':Carrot}\n",
     "f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
+    "\n",
     "dead_dolph_dic={}\n",
+    "population_list_data = []\n",
     "\n",
     "print 'running...'\n",
     "for i in range(1, 11):\n",
     "    \n",
     "    print 'Trial No. ', i\n",
+    "    active_maters = 0\n",
     "    \n",
+    "    population_list = []\n",
     "    male_generator = name_generator('male')\n",
     "    female_generator = name_generator('female')\n",
+    "\n",
     "    \n",
     "    for t in range(150): #this progresses through 150 years\n",
+    "        population = len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()) \n",
     "        if t==0 or t==25 or t==50 or t==75 or t==100 or t==125:\n",
     "            print '#####################################################',\\\n",
     "                  '\\n', 'Entering Year: ', t, 'with',\\\n",
-    "                  len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()),\\\n",
-    "                'dolphins,', 'with', 'num', 'breeding.'\n",
-    "\n",
+    "                  population, 'dolphins,', 'with', active_maters, 'breeding.'\n",
+    "            \n",
     "        if t==149:\n",
     "            print '#####################################################',\\\n",
     "                  '\\n','At year', t, ', there are ',\\\n",
-    "                  len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()),\\\n",
-    "                'living dolphins.'\n",
+    "                  population, 'living dolphins.'\n",
+    "        \n",
     "        lst = []\n",
     "\n",
     "        #male age dolphins\n",
@@ -244,13 +268,32 @@
     "                m_dolph_dic[dolphin.name]= dolphin\n",
     "            else:\n",
     "                f_dolph_dic[dolphin.name]= dolphin\n",
-    "                \n",
+    "        \n",
+    "        active_maters = 0\n",
+    "        \n",
+    "        for dolphin in m_dolph_dic: # counts the amount of dolphins able to breed\n",
+    "            dol = m_dolph_dic[str(dolphin)]\n",
+    "            if type(dol.timeafter) != int:\n",
+    "                active_maters += 1 \n",
+    "                #print active_maters\n",
+    "        \n",
+    "        for dolphin in f_dolph_dic:\n",
+    "            dol = f_dolph_dic[dolphin]\n",
+    "            if type(dol.timeafter) != int:\n",
+    "                active_maters += 1\n",
+    "        \n",
+    "        population_list.append(population)\n",
+    "        #print population_list\n",
+    "    \n",
+    "    population_list_data.append(population_list)\n",
+    "        \n",
+    "        \n",
     "    m_dolph_dic={'Jeffery':Jeffery, 'Carrot':Carrot} #restarting the dics\n",
     "    f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
     "    dead_dolph_dic={}\n",
     "    \n",
-    "    print 'n\\', \"***************************************************************'\n",
-    "    "
+    "    print \"***************************************************************\"\n",
+    "    \n"
    ]
   },
   {
