grade this Zach

--- a/dolphins.py.ipynb
+++ b/dolphins.py.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running...\n",
-      "Trial No.  1\n",
-      "##################################################### \n",
-      "Entering Year:  0 with 4 dolphins, with 0 breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  25 with 11 dolphins, with 6 breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  50 with 21 dolphins, with 15 breeding.\n",
-      "##################################################### \n",
-      "Entering Year:  75 with 35 dolphins, with 21 breeding.\n"
-     ]
-    },
-    {
-     "ename": "StopIteration",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-ac2b18e233d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#mates dolphin population\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mfemale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m                 \u001b[0mbaby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfemale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDolphins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#check if it is the string 'cannot procreate' or a dolphin instance if it is\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m                     \u001b[0mbaby_dolphins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaby\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-ac2b18e233d1>\u001b[0m in \u001b[0;36mcreation\u001b[0;34m(mother, father)\u001b[0m\n\u001b[1;32m    145\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mmale_babyboy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m             \u001b[0mfemale_gener\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfemale_generator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m             \u001b[0mfemale_babygurl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDolphins\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfemale_gener\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfather\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgender\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#creates instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0mmother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeafter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mStopIteration\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "\n",
@@ -45,12 +16,17 @@
     "Name: Jacob Baca\n",
     "Partner: Terry Tran\n",
     "\n",
-    "Build a model for a dolohin population over 150 years. This will take a while\n",
-    "to run because I am creating the list of names each trial. Sorry! I will change\n",
-    "it in part B\n",
+    "Build a model for a dolohin population over 150 years.\n",
+    "\n",
+    "This will take a whileto run because I am creating the \n",
+    "list of names each trial. Sorry! \n",
     "\n",
     "\"\"\"\n",
     "\n",
+    "%matplotlib inline\n",
+    "from pylab import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import random \n",
     "import math\n",
     "import urllib2 \n",
@@ -117,7 +93,7 @@
     "    female_name_lst = []\n",
     "    z = 0 #number of pages iterated through\n",
     "\n",
-    "    while z <=1: #iterates through baby-names website pages for names \n",
+    "    while z <=200: #iterates through baby-names website pages for names \n",
     "\n",
     "        m_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
     "        f_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
@@ -201,7 +177,8 @@
     "\n",
     "dead_dolph_dic={}\n",
     "population_list_data = []\n",
-    "\n",
+    "male_generator = name_generator('male')\n",
+    "female_generator = name_generator('female')\n",
     "print 'running...'\n",
     "for i in range(1, 11):\n",
     "    \n",
@@ -209,11 +186,11 @@
     "    active_maters = 0\n",
     "    \n",
     "    population_list = []\n",
-    "    male_generator = name_generator('male')\n",
-    "    female_generator = name_generator('female')\n",
+    "    \n",
     "\n",
     "    \n",
     "    for t in range(150): #this progresses through 150 years\n",
+    "\n",
     "        population = len(m_dolph_dic.keys()) + len(f_dolph_dic.keys()) \n",
     "        if t==0 or t==25 or t==50 or t==75 or t==100 or t==125:\n",
     "            print '#####################################################',\\\n",
@@ -247,7 +224,6 @@
     "            #print dolphin\n",
     "            dol = f_dolph_dic[str(dolphin)]\n",
     "            dol.aging()\n",
-    "            #print 'dol.die() = ', dol.die(),int(dol.death), dol.age\n",
     "            if dol.die() == True:\n",
     "                lst.append(dol)\n",
     "\n",
@@ -286,14 +262,32 @@
     "        #print population_list\n",
     "    \n",
     "    population_list_data.append(population_list)\n",
-    "        \n",
+    "    #print population_list_data\n",
     "        \n",
     "    m_dolph_dic={'Jeffery':Jeffery, 'Carrot':Carrot} #restarting the dics\n",
     "    f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
     "    dead_dolph_dic={}\n",
     "    \n",
     "    print \"***************************************************************\"\n",
-    "    \n"
+    "\n",
+    "ind=0\n",
+    "data_lst = []\n",
+    "while ind <= 151: #finds the average of the trials populations\n",
+    "    data_pt = 0\n",
+    "    for trial in population_list_data:\n",
+    "        data_pt += trial[ind]\n",
+    "    avg_data_list.append(data_pt/len(population_list_data))\n",
+    "\n",
+    "    ind+=1\n",
+    "\n",
+    "#plots the average\n",
+    "x = np.asarray(avg_data_list)\n",
+    "y = np.arange(0,150,1)\n",
+    "plt.plot(y, x)\n",
+    "plt.xlabel('Years')\n",
+    "plt.ylabel('Dolphin Population')\n",
+    "plt.title('Dolphin Population Evolution')\n",
+    "plt.show()\n"
    ]
   },
   {
